Document PPDG/src/objects/HPPStatusTotalFigures__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AverageStatusAgeToWon__c</fullName>
        <label>Average Status Age to Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfClosedOpportunities__c</fullName>
        <label>Number of Closed Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfOpportunities__c</fullName>
        <label>Number of Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfWonOpportunities__c</fullName>
        <label>Number of Won Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfWonOppsWithCompletedDate__c</fullName>
        <label>Number of Won Opps with Completed Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RunDate__c</fullName>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalStatusAgeToWon__c</fullName>
        <label>Total Status Age to Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HPP Status Total Figures</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NumberOfOpportunities__c</columns>
        <columns>NumberOfWonOpportunities__c</columns>
        <columns>NumberOfWonOppsWithCompletedDate__c</columns>
        <columns>Probability__c</columns>
        <columns>TotalStatusAgeToWon__c</columns>
        <columns>AverageStatusAgeToWon__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>